--- a/junit-demo/Jenkinsfile
+++ b/junit-demo/Jenkinsfile
@@ -1,29 +1,10 @@
-
 pipeline {
     agent any
-    
+    }
     stages {
-        stage('compile stage') {
+        stage('Build') { 
             steps {
-                withMaven (maven: 'apache-maven-3.0.5') {
-                 sh 'mvn clean compile'
-            
-                }
-                
-                
-                stage('test stage') {
-            steps {
-                withMaven (maven: 'apache-maven-3.0.5') {
-                 sh 'mvn test'
-                 }
-                 
-                 stage('Deploy') {
-            steps {
-                withMaven (maven: 'apache-maven-3.0.5') {
-                 sh 'mvn deploy'
-                 }
-                
-          
+                sh 'mvn -B -DskipTests clean package' 
             }
         }
     }
